# tradingBot

./: .env  .gitignore  agent.py  backtest_ml.py  backtest_quick.py  best_params.pkl  best_strategy.pkl  clean_trades.py  config.py  data.py  executor.py  feature_cols.pkl  indicators.py  learner.py  main.py  ml_agent.py  ml_model.pkl  ml_trainer.py  notifier.py  pyproject.toml  retrain.py  risk_manager.py  run_service.py  select_stratgy.py  start_dashboard.bat  strategy.py  strategy_evaluator.py  strategy_factory.py  strategy_selector.py  test_connection.py  test_symbols.py  trades.json  utils.py  utils_ml.py
dashboard/: app.py
